--- a/assets/fortressmod/lang/en_US.lang
+++ b/assets/fortressmod/lang/en_US.lang
@@ -1,2 +1,3 @@
 itemGroup.tabName=FortressMod
 tile.FortressGenerator.name=Fortress Generator
+tile.FortressGeneratorClogged.name=Clogged Fortress Generator
