--- a/assets/fortressmod/lang/en_US.lang
+++ b/assets/fortressmod/lang/en_US.lang
@@ -2,3 +2,4 @@ itemGroup.tabName=FortressMod
 tile.FortressGenerator.name=Fortress Generator
 tile.FortressGeneratorClogged.name=Clogged Fortress Generator
 tile.FortressEmergencyKey.name=Emergency Fortress Key
+item.FortressDoor.name=Fortress Door
