Added fortress door generation/degeneration (wooden doors only so far). Working sign white list for fortress door access control.

--- a/assets/fortressmod/lang/en_US.lang
+++ b/assets/fortressmod/lang/en_US.lang
@@ -2,4 +2,5 @@ itemGroup.tabName=FortressMod
 tile.FortressGenerator.name=Fortress Generator
 tile.FortressGeneratorClogged.name=Clogged Fortress Generator
 tile.FortressEmergencyKey.name=Emergency Fortress Key
+tile.FortressGlass.name=Fortress Glass
 item.FortressDoor.name=Fortress Door
