Added particle generation to walls (disabled), changed fortress emergency key texture, found bug and added it to notes.txt

--- a/assets/fortressmod/lang/en_US.lang
+++ b/assets/fortressmod/lang/en_US.lang
@@ -3,4 +3,6 @@ tile.FortressGenerator.name=Fortress Generator
 tile.FortressGeneratorClogged.name=Clogged Fortress Generator
 tile.FortressEmergencyKey.name=Emergency Fortress Key
 tile.FortressGlass.name=Fortress Glass
+tile.FortressObsidian.name=Fortress Obsidian
+tile.FortressBedrock.name=Fortress Bedrock
 item.FortressDoor.name=Fortress Door
