Added fortress manual book (opens gui but don't know how to set text yet)

--- a/assets/fortressmod/lang/en_US.lang
+++ b/assets/fortressmod/lang/en_US.lang
@@ -6,3 +6,4 @@ tile.FortressGlass.name=Fortress Glass
 tile.FortressObsidian.name=Fortress Obsidian
 tile.FortressBedrock.name=Fortress Bedrock
 item.FortressDoor.name=Fortress Door
+item.FortressManual.name=Fortress Manual
