Made fortress doors use nether brick instead of obsidian for white list signs (and made nether brick generatable and obsidian not generatable)

--- a/assets/fortressmod/lang/en_US.lang
+++ b/assets/fortressmod/lang/en_US.lang
@@ -3,7 +3,7 @@ tile.FortressGenerator.name=Fortress Generator
 tile.FortressGeneratorClogged.name=Clogged Fortress Generator
 tile.FortressEmergencyKey.name=Emergency Fortress Key
 tile.FortressGlass.name=Fortress Glass
-tile.FortressObsidian.name=Fortress Obsidian
+tile.FortressNetherBrick.name=Fortress Nether Brick
 tile.FortressBedrock.name=Fortress Bedrock
 item.FortressDoor.name=Fortress Door
 item.FortressManual.name=Fortress Manual
