Added names for fortress stair blocks to en_US.lang

--- a/src/main/java/assets/fortressmod/lang/en_US.lang
+++ b/src/main/java/assets/fortressmod/lang/en_US.lang
@@ -2,9 +2,11 @@ itemGroup.tabName=Fortress Mod
 tile.FortressGenerator.name=Fortress Generator
 tile.FortressGeneratorClogged.name=Clogged Fortress Generator
 tile.FortressEmergencyKey.name=Emergency Fortress Key
+tile.FortressBedrock.name=Fortress Bedrock
+tile.FortressBedrockStairs.name=Fortress Bedrock Stairs
 tile.FortressGlass.name=Fortress Glass
 tile.FortressNetherBrick.name=Fortress Nether Brick
-tile.FortressBedrock.name=Fortress Bedrock
+tile.FortressNetherBrickStairs.name=Fortress Nether Brick Stairs
 item.FortressIronDoor.name=Fortress Iron Door
 item.FortressWoodenDoor.name=Fortress Wooden Door
 item.FortressManual.name=Fortress Manual
